# snakegame

./: .gitignore  Cargo.toml  README.md  credits.txt  default16x32-patched.psfu  default8x16.psfu.patched  lb_server.rs  network.tex
contrib/: build.sh  default16x32-patched.psfu  default8x16.psftxt  keymap.map  setup.sh
crates/lb-server/src/: main.rs
crates/oca_game/: Cargo.toml
crates/oca_game/src/: lib.rs
crates/oca_io/: Cargo.toml
crates/oca_io/src/: cbuf.rs  error.rs  ioctl.rs  lib.rs  network.rs  poll.rs  signal.rs  syscall.rs  termios.rs
crates/oca_term/: Cargo.toml
crates/oca_term/src/: draw.rs  lib.rs  stdin.rs  stdout.rs
crates/pansi/: Cargo.toml
crates/pansi/global/: credits.txt
crates/pansi/src/: lib.rs
crates/psf-util/: Cargo.toml
crates/psf-util/src/: lib.rs  (+1 more)
crates/snake/: Cargo.toml  build.rs
crates/snake-server/: Cargo.toml
crates/snake/pansi/: add-lb.txt  help.txt  snake.txt  stats.txt  welcome.txt
crates/snake/src/: attractor.rs  leaderboard.rs  main.rs  network.rs  snake.rs  ui.rs
crates/snake/src/leaderboard/: network.rs
crates/sudoku/: Cargo.toml
crates/term/: Cargo.toml
crates/tetris/: Cargo.toml  build.rs
lb-server/: Cargo.toml
snake/: Cargo.toml  build.rs  credits.txt  game-over.txt  help.txt  snake.txt  stats.txt  welcome.txt
snake/pansi/: snake.txt
snake/src/: leaderboard.rs  main.rs  snake.rs  terminal.rs
src/: leaderboard.rs  main.rs  snake.rs  terminal.rs
src/terminal/: stdin.rs  stdout.rs  syscall.rs  termios.rs
term/: Cargo.toml
term/src/: ansi.rs  draw.rs  lib.rs  stdin.rs  stdout.rs
(+36 files in other folders)
